--- a/Surebet_python_project.ipynb
+++ b/Surebet_python_project.ipynb
@@ -2024,7 +2024,7 @@
     "if results_count == 0:\n",
     "    print('With ', p, '% of similarity, no match that could lead to a surebet was found.')\n",
     "if results_count > 0:\n",
-    "    print('With ', p, '% of similarity, ', results_count, ' matches were found and could lead to a surebet. See Results_df with the following \"Match id\" values for full understanding: ', list(dict.fromkeys(ids)))\n",
+    "    print('With ', p, '% of similarity, ', results_count, ' matches were found and could lead to a surebet. See Results_df with the following \"Match id\" values for full understanding: ', list(dict.fromkeys(ids))[1:])\n",
     "    # display of the results"
    ]
   },
